src/test/scala/wacc/wacc_examples/invalid/semanticErr/while/control_flow/continueOutsideWhile.wacc
# continue outside while loop

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int x = 0 ;
  continue ;
  exit x 
end
